Sealed the model's structure, converted generic exceptions to assertions